# magma-core

./: .gitignore  Cargo.toml  Makefile  README.md  index.md
artifacts/: checksums.txt  magma_core.wasm
scripts/: deploy-mainnet.sh
src/: constants.rs  contract.rs  duality_helpers.rs  error.rs  execute.rs  lib.rs  mock.rs  msg.rs  query.rs  state.rs  utils.rs
