[package]
name = "magma-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.2.0", features = [
    "stargate",
    "staking",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
    "cosmwasm_2_1",
] }
serde = { version = "1.0.189", default-features = false }
cw-storage-plus = "2.0.0"
thiserror = "1"

# We make dev dependencies optional to also allow them during fuzzing #
# cw-multi-test = { version = "1.2.0", optional = true } #
osmosis-test-tube = { version = "25.0.0", optional = true }

# schemars = "0.8.20"
cosmwasm-schema = { version = "2.0.4", default-features = false }
osmosis-std = "0.25.0"
cw-utils = "1.0.3"

cw20-base = { version = "1.1.2", features = ["library"] }
cw2 = "2.0.0"


readonly = "0.2.12"
anyhow = "1.0.89"

neutron-std = { git = "https://github.com/neutron-org/neutron-std", branch = "temp/pd_and_sod" }

[profile.release]
overflow-checks = true

[features]
fuzzing = ["osmosis-test-tube"]

[dev-dependencies]
osmosis-test-tube = "25.0.0"
