[package]
name = "magma-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.1.0", features = [
    "stargate",
    "staking",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
    "cosmwasm_2_1",
] }
serde = { version = "1.0.189", default-features = false }
cw-storage-plus = "2.0.0"
thiserror = "1"

# We make dev dependencies optional to also allow them during fuzzing #
# cw-multi-test = { version = "1.2.0", optional = true } #
neutron-test-tube = { version = "5.1.3", optional = true }

# schemars = "0.8.20"
cosmwasm-schema = { version = "2.0.4", default-features = false }
cw-utils = "2.0.0"

cw20-base = { version = "2.0.0", features = ["library"] }
cw20 = "2.0.0"


readonly = "0.2.12"
anyhow = "1.0.89"

neutron-std = { git = "https://github.com/neutron-org/neutron-std", branch = "feat/withdraw_with_shares", version = "8.0.0" }
ed25519-zebra                      = { version = "=4.0.3", default-features = false }
once_cell = "1.21.3"

[profile.release]
overflow-checks = true

[features]
fuzzing = ["neutron-test-tube"]

[dev-dependencies]
neutron-test-tube = "5.1.3"
